--- a/module-solution2/index.html
+++ b/module-solution2/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<title>HW Media Query</title>
-	<link rel="stylesheet" type="text/css" href="css/styles.css">
+	<link rel="stylesheet" type="text/css" href="CSS/styles.css">
 	
 		
 </head>
