updated module-solution3 folder name

--- a/module-solution3/index.html
+++ b/module-solution3/index.html
@@ -5,8 +5,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Module 3 Solution</title>
 	<link rel="stylesheet" href="">
-	<link rel="stylesheet" type="text/css" href="CSS/bootstrap.css">
-	<link rel="stylesheet" type="text/css" href="CSS/styles.css">
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="css/styles.css">
 	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Oxygen:400,300,700">	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Lora">
 </head>
 <body>
@@ -66,8 +66,8 @@ Morbi molestie quam aliquet ipsum sagittis, vitae finibus nibh congue. Sed ferme
 Mauris congue ac eros ac ultrices. Curabitur interdum, sapien non facilisis sagittis, nisi elit convallis velit, eget dictum nisi urna nec leo. Aenean et mi et mi imperdiet tincidunt. Morbi faucibus ipsum metus, vel congue libero tempus non. Ut vestibulum quam sed finibus eleifend. Aliquam tristique sollicitudin nisl eu congue. Mauris interdum, lorem ut hendrerit aliquet, mauris velit interdum tellus, non cursus ex dolor a sapien. Proin malesuada purus justo. Fusce elementum erat quis lacus vestibulum volutpat. Vivamus eu enim scelerisque, imperdiet enim quis, finibus leo. Sed quis sapien quis turpis placerat lacinia ac at tortor. Maecenas rhoncus, orci vitae volutpat maximus, libero ex gravida odio, quis dignissim justo nisi sit amet risus. Mauris tincidunt dapibus augue eget iaculis. Vivamus libero massa, sollicitudin id lectus et, posuere vulputate tortor. Cras feugiat augue leo, nec blandit leo dictum a. Donec viverra turpis nec magna placerat aliquet.
 		</section>
 	</div>
-<script src="JS/jquery-1.11.3.min.js"></script>
-<script src="JS/bootstrap.min.js"></script>
-<script src="JS/script.js"></script>
+<script src="js/jquery-1.11.3.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/script.js"></script>
 </body>
 </html>
