--- a/module-solution3/index.html
+++ b/module-solution3/index.html
@@ -12,7 +12,7 @@
 <body>
    <nav>
 	<header id="header-nav" class="navbar navbar-default">
-		<div class="container">
+		<div>
 
 			<div class="navbar-header">
      		 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
